Add more guardrails about multithreading